multi-container-application/smoke-tests/test-secret-env-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-env-pod
spec:
  containers:
  - name: secret-env-pod
    image: ubuntu
    command: ["printenv"]
    args: ["SECRET_MYKEY"]
  restartPolicy: Never
