multi-container-application/smoke-tests/test-external-dns.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-k8s-lb
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-k8s-lb
  template:
    metadata:
      labels:
        app: hello-k8s-lb
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.5
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-k8s-lb
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: hello-k8s-lb
